--- a/client/SmartGarden/src/index.html
+++ b/client/SmartGarden/src/index.html
@@ -18,6 +18,9 @@
           integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
           crossorigin="anonymous"></script>
   <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css"/>
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css"/>
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css"/>
 </head>
 <body>
 <app-root></app-root>
